# Tongji-24-GL

./: .gitattributes  .gitignore  CMakeLists.txt  READEME.md  README.md  fluid_config.json  output.txt  readme.md  rigid_body_config.json
common/: AABB.cpp  AABB.hpp  BVH.cpp  BVH.hpp  BVHConverter.cpp  BVHConverter.hpp  Material.hpp  Primitive.hpp  Quad.cpp  Quad.hpp  animation.h  animation.hpp  animator.hpp  bone.h  camera_control.cpp  camera_control.hpp  draw_base_model.hpp  error.hpp  light_manager.cpp  light_manager.hpp  load_image.cpp  load_image.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render_manager.cpp  renderable_model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  skybox.cpp
common/Basic/: Array2D.hpp  Config.cpp  Config.hpp  Cube.cpp  Cube.hpp  File.cpp  File.hpp  HeapObj.hpp  Image.cpp  Image.hpp  LStorage.cpp  LStorage.hpp  Math.cpp  Math.hpp  Ptr.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Timer.cpp  Timer.hpp  Vec.hpp  Vec3.hpp  Vec4.hpp
common/RTX/: AABB.cpp  AABB.hpp  HitableVisitor.cpp  HitableVisitor.hpp  MatVisitor.cpp  MatVisitor.hpp  Material.cpp  Material.hpp  Ray.cpp  Ray.hpp
common/old/: renderable_model.hpp
fluid/: fluid_config.cpp  fluid_simulator.cpp  load_model.cpp  pressure_solver.cpp  simulation.cpp  voxelizer.cpp
fluid/data_structures/: obstacle.cpp
fluid/renderer/: camera.cpp
fluid/test/: test_scenes.cpp
fluid/testbed/: fluid_config.h  load_model.cpp  load_model.h  main.cpp  test_scenes.cpp
include/: stb_image_resize.h
include/fluid/: fluid_config.h  fluid_simulator.h  load_model.h  pressure_solver.h  simulation.h  voxelizer.h
include/fluid/data_structures/: obstacle.h  short_vec.h  source.h
include/imgui/: CMakeLists.txt
openvdb_include/: libdeflate.h
openvdb_include/openvdb/: version.h
source/camera_path/: camera_transforms.txt
source/model/boat/: boat_obj.mtl
source/model/butterfly/: ehhh.dae  ok.dae
source/model/flower/: flower.mtl
source/model/fluid/: mesh.mtl
source/model/point_cloud/: Cumulonimbus_09.vdb  Cumulonimbus_11.vdb  Cumulonimbus_14.vdb  VDB_PACK_Smoke5.vdb
source/model/room/: room2-closed.mtl  room2-nodoor.mtl  room2.mtl
source/model/room1/: overall.mtl
source/model/room2/: room2-closed.mtl  room2.mtl  test.mtl
source/shader/: common_vertex_shader.vs  cubemap.fs  cubemap.vs  pbr_texture.fs  point_cloud.fs  point_cloud.vs  room.frag  room.vert  standard.frag  standard.vert  tile_fragment_shader.fs
source/shader/classic/: accumulation_fragment_shader.fs  boat.fs  boat.vs  butterfly.fs  butterfly.vs  common_vertex_shader.vs  liquid.fs  liquid.vs  path_tracing_fragment_shader.fs  post_process_fragment_shader.fs  room.frag  room.fs  room.vert  room.vs
src/: 01_Image.cpp  bullet_test.cpp  cloud.cpp  fluid_test.cpp  fluid_testbed.cpp  keyframe_test.cpp  main.cpp  main_offline.cpp  openvdb_test.cpp  reademe.md  test.cpp  test_main.cpp  workbench.cpp
task/: config.hpp  gui_manager.cpp  gui_manager.hpp  reademe.md  readme.md  render_manager.cpp  render_manager.hpp  renderable.hpp  room.cpp  room.hpp  scene.hpp
task/classic/: boat.hpp  bullet_handler.hpp  bullet_world.cpp  bullet_world.hpp  butterfly.cpp  butterfly.hpp  classic_scene.cpp  classic_scene.hpp  fluid.cpp  fluid.hpp  fluid_scene.cpp  fluid_scene.hpp  point_cloud.cpp  point_cloud.hpp  rigid_body_info.hpp  room.cpp  room.hpp
task/scene/: room.cpp  room.hpp
utils/: frame2video.py
